# Obsidian-Notes

./: .gitignore  README.md
AI&ML-Foundations/.obsidian/: appearance.json  community-plugins.json  copilot-index-c4c7f7953dbd43c418913d838fb2820a.json  graph.json  hotkeys.json  workspace-mobile.json
AI&ML-Foundations/.smart-env/: smart_env.json
AI&ML-Foundations/.smart-env/event_logs/: event_logs.ajson
AI&ML-Foundations/00 - Machine Learning/: 3NN.md  ID3.md  Linear Regression.md  Over fitting and Under fitting.md  Performance Metrics.md
Archive-0/.obsidian/: appearance.json  community-plugins.json  hotkeys.json
Archive-0/05 - Other Notes/: Querying before installing Package.md
Tech Notes/.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  hotkeys.json  workspace.json
Tech Notes/01 - Python Scripting and Automation/: APIs and Web Requests.md  Environment Management.md  Index.md  Logging.md  Regular Expressions.md
Tech Notes/01 - Python Scripting and Automation/Testing/Programs and Examples/pytest/my-project/: Makefile  pyproject.toml
Tech Notes/01 - Python Scripting and Automation/Testing/Programs and Examples/pytest/my-project/src/my_project/: sorting_examples.py
Tech Notes/01 - Python Scripting and Automation/Testing/Programs and Examples/pytest/my-project/tests/leetcode/: conftest.py  test_roman_to_integer.py  test_shortest_completing_word.py
Tech Notes/01 - Python Scripting and Automation/Testing/Programs and Examples/pytest/my-project/tests/sort/: test_benchmark.py
Tech Notes/05 - Other Notes/: Git SSH setup.md
(+399 files in other folders)
